@@ -71,7 +71,7 @@ abbreviate chartr make.names strtrim tolower toupper give error.
 #include <config.h>
 #endif
 
-/* Used to indicate that we can safely converted marked UTF-8 strings
+/* Used to indicate that we can safely convert marked UTF-8 strings
    to wchar_t* -- not currently used.
 */
 #if defined(Win32) || defined(__STDC_ISO_10646__) || defined(__APPLE__) || defined(__FreeBSD__) || defined(__sun)
@@ -797,6 +797,8 @@ SEXP attribute_hidden do_substrgets(SEXP call, SEXP op, SEXP args, SEXP env)
         }
         R_FreeStringBufferL(&cbuff);
     }
+    SHALLOW_DUPLICATE_ATTRIB(s, x);
+    /* This copied the class, if any */
     UNPROTECT(1);
     return s;
 }
